[tool.poetry]
name = "line-bot"
version = "0.1.0"
description = ""
authors = ["Shishin Mo <maoson0307@gmail.com>"]
readme = "README.md"
packages = [{include = "line_bot"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
boto3 = "^1.26.109"
line-bot-sdk = "^2.4.2"
langchain = "0.0.126"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
